# goldilocks

./: .gitignore  Cargo.toml
docs/: DESIGN.md  REQUIREMENTS.md
src/: formatter.rs  ir.rs  lib.rs  main.rs  printer.rs
tests/: fixtures_test.rs
tests/fixtures/: 01_simple_assignments.rb  02_method_definitions.expected.rb  02_method_definitions.rb  03_class_module.expected.rb  03_class_module.rb  04_conditionals.expected.rb  04_conditionals.rb  05_blocks.expected.rb  05_blocks.rb  06_hashes_arrays.expected.rb  06_hashes_arrays.rb  07_method_chains.expected.rb  07_method_chains.rb  08_strings_heredocs.expected.rb  08_strings_heredocs.rb  09_long_args.expected.rb  09_long_args.rb  10_realistic_mixed.expected.rb  10_realistic_mixed.rb  11_boundary.expected.rb  11_boundary.rb
